Fixed the cover over full-screen videos having too much z-index, blocking links

--- a/html_head/css/style.css
+++ b/html_head/css/style.css
@@ -59,7 +59,7 @@ ul {
     width: 100vw;
     height: 100vh;
     object-fit: cover;
-    z-index: -1;
+    z-index: -2;
 }
 
 #cover {
@@ -67,7 +67,7 @@ ul {
     width: 100vw;
     height: 100vh;
     object-fit: cover;
-    z-index: 10;
+    z-index: -1;
     top: 0;
     left: 0;
     margin: 0;
